# launchline

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  create-release.yml  publish.yml  release.yml
src/launchline/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  fuzzy.py  keys.py  runner.py  ui.py
tests/: conftest.py  test_cli.py  test_config.py  test_cross_platform.py  test_runner.py  test_ui.py
tools/: generate_icon.py  generate_screenshots.py
