[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "launchline"
version = "0.1.0"
description = "A lightweight terminal launcher for interactive CLI tools."
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [{ name = "Mike Hill" }]
keywords = ["terminal", "launcher", "cli", "menu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mikejhill/launchline"
Repository = "https://github.com/mikejhill/launchline"
Issues = "https://github.com/mikejhill/launchline/issues"
Changelog = "https://github.com/mikejhill/launchline/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.7",
]
screenshots = [
    "pillow>=10",
    "pyte>=0.8",
]

[project.scripts]
launchline = "launchline.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF", "D", "ANN", "PT", "RET", "ARG"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D102"]
"tools/**" = ["D100", "D104", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["launchline"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "launchline.keys"
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=launchline --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["launchline"]
omit = ["src/launchline/__main__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
